# AUV-Controller

./: CMakeLists.txt
AUV_nolag_Model/: A_c.mat  B.mat
UAV_lag_Model/: model_nolag.mat
UAV_nolag_Model/: B_c.mat
include/: AUVCost.info  AUV_backup.h  AUV_model.h  Jacob_example.h  UAV_model.h  dmsCost.info  exampleDir.h
model_data/: A.mat
src/: MPC_Controller.cpp  MPC_backup.cpp  MPC_example.cpp  classical_Direct_Multiple_Shooting.cpp
